--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -52,12 +52,12 @@
     <string name="settings">Impostazioni</string>
     <string name="news_details">Notizia</string>
     <string name="delete">Elimina</string>
-    <string name="news">Notizie</string>
+    <string name="campionato">Notizie</string>
     <string name="personal_area">Area personale</string>
 
     <string name="nav_drawer_subtitle">Rimani aggiornato sulle notizie dal mondo</string>
 
-    <string name="error_retrieving_news">Errore nel recupero delle news</string>
+    <string name="error_retrieving_news">Errore nel recupero delle campionato</string>
     <string name="api_key_error">API Key non valida o numero massimo di richieste raggiunto</string>
     <string name="unexpected_error">Errore imprevisto</string>
 
@@ -65,8 +65,8 @@
     <string name="news_removed_from_favorite_list_message">News rimossa dalla lista dei preferiti</string>
 
     <!-- Content Description Strings -->
-    <string name="content_description_fav_addition">Aggiungi la news alla lista dei preferiti</string>
-    <string name="content_description_fav_delete">Rimuovi la news dalla lista dei preferiti</string>
-    <string name="content_description_news_cover_image">Immagine di copertina della news</string>
+    <string name="content_description_fav_addition">Aggiungi la campionato alla lista dei preferiti</string>
+    <string name="content_description_fav_delete">Rimuovi la campionato dalla lista dei preferiti</string>
+    <string name="content_description_news_cover_image">Immagine di copertina della campionato</string>
 
 </resources>
