--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="settings">Settings</string>
     <string name="news_details">News</string>
     <string name="delete">Delete</string>
-    <string name="campionato">News</string>
+    <string name="campionato">Championship</string>
     <string name="personal_area">Personal area</string>
 
     <string name="nav_drawer_subtitle">Stay tuned for campionato from the world</string>
