--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -46,28 +46,27 @@
 
     <string name="user_data_retrieving_message">Recupero dei dati in corso</string>
 
-    <string name="country_news">Mondo</string>
-    <string name="topic_news">Argomento</string>
-    <string name="favorite_news">Preferiti</string>
+    <string name="campionato_list">Campionati</string>
+    <string name="partita_list">Partite</string>
+    <string name="favorite_campionato">Preferiti</string>
     <string name="settings">Impostazioni</string>
-    <string name="news_details">Notizia</string>
     <string name="delete">Elimina</string>
-    <string name="campionato_list_item_nome">Serie X</string>
     <string name="campionato">Campionato</string>
     <string name="personal_area">Area personale</string>
 
     <string name="nav_drawer_subtitle">Rimani aggiornato sulle notizie dal mondo</string>
 
-    <string name="error_retrieving_news">Errore nel recupero delle campionato</string>
+    <string name="error_retrieving_api">Errore nel recupero dei dati da API</string>
     <string name="api_key_error">API Key non valida o numero massimo di richieste raggiunto</string>
     <string name="unexpected_error">Errore imprevisto</string>
 
-    <string name="news_added_to_favorite_list_message">News aggiunta alla lista dei preferiti</string>
-    <string name="news_removed_from_favorite_list_message">News rimossa dalla lista dei preferiti</string>
+    <string name="campionato_added_to_favorite_list_message">Campionato aggiunto alla lista dei preferiti</string>
+    <string name="campionato_removed_from_favorite_list_message">Campionato rimosso dalla lista dei preferiti</string>
 
     <!-- Content Description Strings -->
-    <string name="content_description_fav_addition">Aggiungi la campionato alla lista dei preferiti</string>
-    <string name="content_description_fav_delete">Rimuovi la campionato dalla lista dei preferiti</string>
-    <string name="content_description_news_cover_image">Immagine di copertina della campionato</string>
+    <string name="content_description_fav_addition">Aggiungi il campionato alla lista dei preferiti</string>
+    <string name="content_description_fav_delete">Rimuovi il campionato dalla lista dei preferiti</string>
+
+    <string name="campionato_list_item_nome">Serie X</string>
 
 </resources>
