--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,28 +49,27 @@
 
     <string name="user_data_retrieving_message">Retrieving of user data in progress</string>
 
-    <string name="country_news">World</string>
-    <string name="topic_news">Topic</string>
-    <string name="favorite_news">Favorites</string>
+    <string name="campionato_list">Championships</string>
+    <string name="partita_list">Matches</string>
+    <string name="favorite_campionato">Favorites</string>
     <string name="settings">Settings</string>
-    <string name="news_details">News</string>
     <string name="delete">Delete</string>
     <string name="campionato">Championship</string>
     <string name="personal_area">Personal area</string>
 
     <string name="nav_drawer_subtitle">Stay tuned for campionato from the world</string>
 
-    <string name="error_retrieving_news">Error in retrieving the campionato</string>
+    <string name="error_retrieving_api">Error in retrieving the API data</string>
     <string name="api_key_error">API Key not valid or maximum number of requests reached</string>
     <string name="unexpected_error">Unexpected error</string>
 
-    <string name="news_added_to_favorite_list_message">News added to the favorite list</string>
-    <string name="news_removed_from_favorite_list_message">News removed from the favorite list</string>
+    <string name="campionato_added_to_favorite_list_message">Campionato added to the favorite list</string>
+    <string name="campionato_removed_from_favorite_list_message">Campionato removed from the favorite list</string>
 
     <!-- Content Description Strings -->
     <string name="content_description_fav_addition">Add the campionato to the favorite list</string>
     <string name="content_description_fav_delete">Remove the campionato from the favorite list</string>
-    <string name="content_description_news_cover_image">News cover image</string>
+
     <string name="campionato_list_item_nome">Serie X</string>
 
 </resources>
