--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -4,8 +4,8 @@
     <string name="logo">Logo Applicazione</string>
     <string name="forgot_password">Password dimenticata?</string>
     <string name="txt_or">O</string>
-    <string name="google_login">Login con Google</string>
-    <string name="new_account">Sei nuovo?</string>
+    <string name="google_login">Google Login</string>
+    <string name="new_account">Non possiedi un account?</string>
     <string name="register">Registrati</string>
     <string name="next">Avanti</string>
 
