--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="password" translatable="false">Password</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="txt_or">OR</string>
-    <string name="google_login">Login with Google</string>
-    <string name="new_account">New to Fipav Online?</string>
+    <string name="google_login">Google Login</string>
+    <string name="new_account">Do you not have an account?</string>
     <string name="register">Register</string>
     <string name="next">Next</string>
 
